dsl2/src/test/resources/parsing/invalid/bad_syntax/repeated_declaration.uss
int foo = 1;
int foo = 2;